# anp-hermes

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md
.github/workflows/: ci.yml
.learnings/: HEALS.md
.superpowers/sdd/: progress.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md
clients/anp-client/: README.md  SKILL.md  requirements-dev.txt  requirements.txt
clients/anp-client/scripts/: anp_client.py  did_identity.py  did_server.py  signing.py
clients/anp-client/tests/: conftest.py  test_chat.py  test_cli.py  test_discovery.py  test_identity.py  test_natural_language_examples.py  test_package_boundary.py
docs/: anp-hermes-current-implementation-analysis.md  anp-hermes-openspec-execution-state.md  anp-hermes-openspec-roadmap.md  demo-walkthrough.md
docs/diagrams/: 01-component-architecture.md  02-e2e-call-sequence.md  03-error-paths.md  04-tool-rpc-architecture.md
docs/superpowers/plans/: 2026-07-03-anp-hermes-plugin.md  2026-07-04-anp-hermes-e2e-tests.md  2026-07-05-refactor-anp-auth-error-handling.md  2026-07-09-add-anp-client-skill.md  2026-07-13-simplify-anp-local-validation.md  2026-07-14-anp-hermes-community-readme.md  2026-07-15-anp-hermes-demo-p0-p1-closeout.md
docs/superpowers/research/: anp-sdk-and-hermes-contract.md
docs/superpowers/specs/: 2026-07-03-anp-hermes-plugin-design.md  2026-07-14-anp-hermes-community-readme-design.md  2026-07-15-anp-hermes-demo-p0-p1-closeout-design.md
openspec/changes/add-anp-client-skill/: proposal.md  tasks.md
openspec/changes/anp-agent-dialog-install/: design.md  tasks.md
openspec/changes/anp-hermes-e2e-tests/: design.md  tasks.md
openspec/changes/close-demo-readiness/: .openspec.yaml  tasks.md
openspec/changes/create-anp-hermes-plugin/: design.md  proposal.md  tasks.md
openspec/changes/refactor-anp-auth-error-handling/: design.md  proposal.md  tasks.md
openspec/specs/anp-auth-error-classification/: spec.md
openspec/specs/anp-authentication-info/: spec.md
openspec/specs/anp-client-skill/: spec.md
openspec/specs/anp-community-readiness/: spec.md
openspec/specs/anp-core-binding/: spec.md
openspec/specs/anp-did-resolver/: spec.md
openspec/specs/anp-discovery/: spec.md
openspec/specs/anp-e2e-echo-test/: spec.md
openspec/specs/anp-e2e-llm-test/: spec.md
openspec/specs/anp-hermes-tool-exposure/: spec.md
openspec/specs/anp-identity/: spec.md
plugins/anp-agent/: README.md  __init__.py  adapter.py  auth.py  bridge.py  config.py  constants.py  identity.py  plugin.yaml  pyproject.toml  server.py
plugins/anp-agent/anp_agent/: __init__.py  adapter.py  auth.py  bridge.py  config.py  constants.py  identity.py  server.py  tools.py
plugins/anp-agent/tests/: test_adapter.py  test_auth.py  test_bridge.py  test_config.py  test_identity.py  test_integration.py  test_packaging.py  test_server.py  test_tools.py
plugins/anp-agent/tests/e2e/: conftest.py  test_anp_client_skill.py  test_echo.py  test_fixtures.py  test_helpers.py  test_llm.py
plugins/anp-agent/tests/e2e/data/anp-echo/: SKILL.md
plugins/anp-agent/tests/helpers/: did_server.py  mock_llm.py  signing.py
scripts/: anp_chat_client.py  package_anp_release.py  start_did_server.py  verify_anp_sdk.py
tests/: test_anp_dependency_versions.py  test_package_anp_release.py
(+108 files in other folders)
