[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-platform-anp-agent"
version = "0.1.0"
description = "ANP（Agent Network Protocol）服务智能体 Hermes 平台插件"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ANP Hermes Contributors" },
]
keywords = ["anp", "agent-network-protocol", "hermes", "platform", "adapter", "did-wba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anp>=0.8.8,<0.9.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anp[api]>=0.8.8,<0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
