[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anp_agent*"]

[project]
name = "hermes-platform-anp-agent"
version = "0.1.0"
description = "ANP（Agent Network Protocol）服务智能体 Hermes 平台插件"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ANP Hermes Contributors" },
]
keywords = ["anp", "agent-network-protocol", "hermes", "platform", "adapter", "did-wba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anp>=0.8.9,<0.9.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anp[api]>=0.8.9,<0.9.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: 需要 --run-e2e 的端到端测试",
    "slow: 需要 --run-slow-e2e 的真实 LLM 慢速测试",
]

[tool.coverage.run]
source = ["anp_agent"]
omit = [
    "tests/*",
    "tests/e2e/*",
    "tests/helpers/*",
    "**/__pycache__/*",
    "did.json",
    "*.pem",
    "*.tmp",
    "*.bak.*",
]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = ["E501", "N999"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["anp_agent"]
